--- a/package.json
+++ b/package.json
@@ -35,19 +35,19 @@
   },
   "homepage": "https://github.com/videojs/videojs-generate-postcss-config",
   "dependencies": {
-    "autoprefixer": "^9.1.1",
-    "postcss-banner": "^3.0.0",
-    "postcss-calc": "^6.0.1",
-    "postcss-csso": "^3.0.0",
-    "postcss-custom-properties": "^8.0.8",
-    "postcss-import": "^12.0.0",
-    "postcss-nesting": "^7.0.0",
+    "autoprefixer": "^9.7.4",
+    "postcss-banner": "^3.0.1",
+    "postcss-calc": "^7.0.1",
+    "postcss-csso": "^4.0.0",
+    "postcss-custom-properties": "^9.0.2",
+    "postcss-import": "^12.0.1",
+    "postcss-nesting": "^7.0.1",
     "postcss-progress": "^1.1.1"
   },
   "devDependencies": {
-    "@videojs/generator-helpers": "^1.0.0",
-    "videojs-standard": "^8.0.2",
-    "videojs-generator-verify": "~1.2.0"
+    "@videojs/generator-helpers": "^1.1.0",
+    "videojs-generator-verify": "~1.2.0",
+    "videojs-standard": "^8.0.4"
   },
   "husky": {
     "hooks": {
