--- a/package.json
+++ b/package.json
@@ -34,15 +34,20 @@
     "url": "https://github.com/videojs/videojs-generate-postcss-config/issues"
   },
   "homepage": "https://github.com/videojs/videojs-generate-postcss-config",
+  "peerDependencies": {
+    "postcss": "^8.0.0",
+    "postcss-cli": "^8.0.0"
+  },
   "dependencies": {
-    "autoprefixer": "^9.7.4",
-    "postcss-banner": "^3.0.1",
-    "postcss-calc": "^7.0.1",
-    "postcss-csso": "^4.0.0",
-    "postcss-custom-properties": "^9.0.2",
-    "postcss-import": "^12.0.1",
+    "autoprefixer": "^10.0.1",
+    "postcss-banner": "^3.0.0",
+    "postcss-calc": "^7.0.5",
+    "postcss-csso": "^5.0.0",
+    "postcss-custom-properties": "^10.0.0",
+    "postcss-import": "^13.0.0",
     "postcss-nested": "^5.0.1",
-    "postcss-progress": "^1.1.1"
+    "postcss-nesting": "^7.0.0",
+    "postcss-progress": "^2.0.0"
   },
   "devDependencies": {
     "@videojs/generator-helpers": "^1.1.0",
