--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "postcss-csso": "^4.0.0",
     "postcss-custom-properties": "^9.0.2",
     "postcss-import": "^12.0.1",
-    "postcss-nesting": "^7.0.1",
+    "postcss-nested": "^5.0.1",
     "postcss-progress": "^1.1.1"
   },
   "devDependencies": {
